@@ -392,8 +392,9 @@
       },
       "Bruno de Oliveira Abinader" : {
          "emails" : [
-            "brunoabinader@gmail.com",
-            "bruno.abinader@basyskom.com"
+            "bruno.d@partner.samsung.com",
+            "bruno.abinader@basyskom.com",
+            "brunoabinader@gmail.com"
          ],
          "expertise" : "The QtWebKit Port, CSS, Layout and Rendering",
          "nicks" : [
